c3prj1_deck/grade.txt
Grading at Mon Jun  8 04:44:21 UTC 2020
Compiling deck.c
In file included from deck.c:4:0:
deck.h:22:2: error: #endif without #if
 #endif
  ^
Could not compile your deck.c!

Overall Grade: FAILED
